hamburger button visibility  bug fixed

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -49,11 +49,7 @@
 
 .hamburgerContainer{
     display: none;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
 }
 
 .hamburgerIcon{
@@ -66,7 +62,7 @@
     width: 35px;
 }
 
-@media screen and (max-width:500px){
+@media screen and (max-width:700px){
     .headerContainer{
         max-width: 90%;
         margin: 20px auto;
@@ -77,6 +73,10 @@
     }
 
     .hamburgerContainer{
-        display: block;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
