--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -17,7 +17,7 @@
     color: var(--very-dark-violet);
 }
 
-@media screen and (max-width:500px){
+@media screen and (max-width:700px){
     .navbarContainer{
         display: none;
     }
